logs/loss_search_logs/loss_ce_alpha0.5_beta0.5_weight0.5_dropout0.25.txt
=== 命令 ===
python main.py --loss_type ce --alpha 0.5 --beta 0.5 --neural_init_weight 0.5 --dropout 0.25 --name loss_ce_alpha0.5_beta0.5_weight0.5_dropout0.25 --wandb True

=== 标准输出 ===

=== 标准错误 ===
Traceback (most recent call last):
  File "/root/project5/main.py", line 8, in <module>
    from multimodel import MultimodalModel
  File "/root/project5/multimodel.py", line 157
    elif self.config.feature_fusion == "dynamic_routing":
    ^^^^
SyntaxError: invalid syntax

